--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^7.3.12",
+    "axios": "^1.9.0",
     "expo": "~53.0.9",
+    "expo-location": "~18.1.5",
     "expo-router": "^5.0.7",
     "expo-status-bar": "~2.2.3",
+    "mobile": "file:",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-maps": "1.20.1",
-    "expo-location": "~18.1.5"
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "typescript": "~5.8.3"
   },
   "private": true
